--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
     <p>Prompt value from user</p>
-    <script src="project3.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
